[NTP] Fix crash when a doodle is present

When a non-interactive doodle is present and a google-base-url
is specified on the command line the attempt to modify
the fullpage url would fail. Only modify it if 'https://www.google.com/'
is present (it's non-empty).

Bug: 916185
Change-Id: I12d10d32aab36cf29d2ddfeaf7f26494da8c4de9
Reviewed-on: https://chromium-review.googlesource.com/c/1382898
Reviewed-by: Kristi Park <kristipark@chromium.org>
Commit-Queue: Kyle Milka <kmilka@chromium.org>
Cr-Commit-Position: refs/heads/master@{#617631}
Former-commit-id: 17b0f10ed700f07d8c5cdb54a3e5a8f3e089acde